minor sonar fix